[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infracloud"
version = "0.1.0"
description = "Launch and manage GPU servers on Vast.ai for AI model inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "vastai-sdk>=0.1.0",
    "httpx>=0.27",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
infracloud = "infracloud.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["infracloud"]

[dependency-groups]
dev = []
